--- a/screen-designer/src/app/designer-canvas/designer-canvas.html
+++ b/screen-designer/src/app/designer-canvas/designer-canvas.html
@@ -1,1 +1,16 @@
-<p>designer-canvas works!</p>
+<h3>Canvas</h3>
+<div
+  cdkDropList
+  [cdkDropListData]="droppedElements"
+  [cdkDropListConnectedTo]="[]"
+  [cdkDropListSortingDisabled]="true"
+  (cdkDropListDropped)="onDrop($event)"
+  class="drop-zone"
+>
+  <app-ui-element
+    *ngFor="let elem of droppedElements"
+    [data]="elem"
+    class="ui-block"
+  ></app-ui-element>
+</div>
+
