--- a/screen-designer/src/app/app.html
+++ b/screen-designer/src/app/app.html
@@ -2,4 +2,5 @@
 <div class="container">
   <app-component-palette></app-component-palette>
   <app-designer-canvas></app-designer-canvas>
+  <app-properties-panel></app-properties-panel>
 </div>
