--- a/screen-designer/src/app/designer-canvas/designer-canvas.html
+++ b/screen-designer/src/app/designer-canvas/designer-canvas.html
@@ -10,6 +10,7 @@
   <app-ui-element
     *ngFor="let elem of droppedElements"
     [data]="elem"
+    (clicked)="selectElement(elem)"
     class="ui-block"
   ></app-ui-element>
 </div>
