--- a/screen-designer/src/app/ui-element/ui-element.html
+++ b/screen-designer/src/app/ui-element/ui-element.html
@@ -1,4 +1,8 @@
-<div (click)="onClick()">
+<div (click)="onClick()" class="ui-element">
+  <p>CLIQUE ICI</p>
+</div>
+
+<div class="ui-element" (click)="onClick()">
 <ng-container [ngSwitch]="data.type">
 
   <button *ngSwitchCase="'button'">{{ data.properties['label'] }}</button>
