--- a/screen-designer/src/app/app.html
+++ b/screen-designer/src/app/app.html
@@ -1,6 +1,14 @@
 
-<div class="container">
-  <app-component-palette></app-component-palette>
-  <app-designer-canvas></app-designer-canvas>
-  <app-properties-panel></app-properties-panel>
-</div>
+<nav class="top-bar">
+  <div class="top-bar-left">
+    <span class="site-name">Screen Designer</span>
+  </div>
+  <div class="top-bar-right">
+    <a class="top-bar-button" routerLink="/" routerLinkActive="active">🏠 Home</a>
+    <a class="top-bar-button" routerLink="/designer" routerLinkActive="active">🎨 Screen Designer</a>
+  
+  </div>
+</nav>
+
+<router-outlet></router-outlet> 
+
